[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "essentials-configuration-keyvault"
version = "1.0.0"
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
description = "Azure Key Vault source for essentials-configuration."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["Azure Key Vault", "secrets", "configuration", "environment"]

dependencies = ["essentials-configuration~=2.0.0", "azure-identity~=1.12.0", "azure-keyvault-secrets~=4.7.0"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/deps",
    "/htmlcov",
    "/tests",
    "Makefile",
    "CODE_OF_CONDUCT.md",
    ".isort.cfg",
    ".gitignore",
    ".flake8",
    "junit",
    "requirements.txt",
    "mypy.ini",
    "pytest.ini",
    "venv",
]

[project.urls]
"Homepage" = "https://github.com/Neoteroi/essentials-configuration-keyvault"
"Bug Tracker" = "https://github.com/Neoteroi/essentials-configuration-keyvault/issues"
